--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="action_settings">Settings</string>
     <string name="start_game">Start game</string>
     <string name="let_know">Let other know</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="game_in_progress">Game in progress... \n If finished let other know</string>
+    <string name="lets_play">Start new game or join to another...</string>
 
 </resources>
